# ccgonext

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  README_zh.md
.claude/commands/: review.md
.github/workflows/: ci.yml
docs/: architecture.md
npm/: README.md  package.json
scripts/: build-macOS-universal-binary.sh  check-version.sh  install.sh
src/: events.rs  lib.rs  main.rs
src/acp/: callbacks.rs  mod.rs  process.rs  process_tree.rs  protocol.rs  windows_job.rs
src/agent/: claudecode.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/config/: mod.rs
src/log_provider/: codex.rs  gemini.rs  mod.rs  opencode.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/pty/: mod.rs
src/session/: mod.rs
src/state/: mod.rs
src/web/: auth.rs  handlers.rs  mod.rs  websocket.rs
static/: index.html
tests/: README.md  session_integration.rs
