[package]
name = "ccgonext"
version = "0.1.5"
edition = "2021"
authors = ["missdeer"]
description = "ClaudeCode-Codex-Gemini-OpenCode Next MCP Server - Multi-AI collaboration bridge"
license = "GPL-3.0-only OR LicenseRef-Commercial"
repository = "https://github.com/missdeer/ccgonext"
keywords = ["mcp", "ai", "claude", "codex", "gemini"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8.5", features = ["axum"] }
mime_guess = "2.0"

# WebSocket
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# ACP protocol types
agent-client-protocol-schema = { version = "0.11", features = ["unstable_cancel_request"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[[bin]]
name = "ccgonext"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
